--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.SolicareMonitor" parent="android:Theme.Material.Light.NoActionBar">
+
+    <style name="Theme.SolicareMonitor" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">true</item>
+    </style>
+
+    <style name="Theme.SolicareMonitor.Splash" parent="Theme.SplashScreen">
+        <!-- 앱 아이콘, 배경 등 커스텀 가능 -->
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/app_icon</item>
+        <item name="postSplashScreenTheme">@style/Theme.SolicareMonitor</item>
     </style>
 </resources>
-
